# OperatingSystem

./: .gitignore
Homework/: hw01.md  hw02.md  hw03.md  hw04.md  hw05.md  hw06.md  hw07.md  hw08.md  hw09.md
Lab/Lab1_ThreadMechanism/: README.md
Lab/Lab2_ThreadScheduling/: README.md
Lab/Lab3_SynchronizationMechanism/: README.md
Lab/Lab4_VirtualMemory/: README.md
Lab/Lab5_FileSystem/: README.md
Lab/Lab6_SystemCall/: README.md
Nachos/nachos-3.4/code/: CMakeLists.txt  build_nachos.sh  debug_nachos.sh
Nachos/nachos-3.4/code/filesys/: Makefile  directory.cc  directory.h  filehdr.cc  filehdr.h  filesys.cc  filesys.h  fstest.cc  openfile.cc  openfile.h
Nachos/nachos-3.4/code/filesys/test/: trump
Nachos/nachos-3.4/code/machine/: console.cc  console.h  disk.cc  machine.cc  machine.h  sysdep.cc  sysdep.h  timer.cc  translate.cc  translate.h
Nachos/nachos-3.4/code/network/: post.cc
Nachos/nachos-3.4/code/test/: Makefile  exit.c  sort.c  syscall_test.c
Nachos/nachos-3.4/code/threads/: main.cc  scheduler.cc  scheduler.h  synch.cc  synch.h  system.cc  system.h  thread.cc  thread.h  threadtest-lock.cc  threadtest.cc
Nachos/nachos-3.4/code/userprog/: Makefile  addrspace.cc  addrspace.h  exception.cc  progtest.cc
XV6/: XV6调度.md  XV6锁.md  xv6中断与系统调用.md  xv6文件系统.md  xv6线程.md  xv6虚拟存储.md
